# vins_fusion_ros2

./: CMakeLists.txt  README.md  package.xml
config/euroc/: uzh_davis_config.yaml
config/kitti_odom/: kitti_config00-02.yaml
config/race1/: race1_config.yaml
include/vins_fusion_ros2/: vins_estimator.h  visualization.h
launch/: vins_fusion_ros2.launch.py
src/: vins_estimator.cpp  vins_estimator_node.cpp  visualization.cpp
vins/: CMakeLists.txt
vins/cmake/: FindGlog.cmake
vins/include/vins/camera_models/: Camera.h  CameraFactory.h  CataCamera.h  CostFunctionFactory.h  EquidistantCamera.h  PinholeCamera.h  PinholeFullCamera.h  ScaramuzzaCamera.h
vins/include/vins/common/: data_type.h  sensor_data_type.h
vins/include/vins/estimator/: estimator.h  feature_manager.h  parameters.h  sensor_data_type.h
vins/include/vins/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.h  pose_local_parameterization.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h
vins/include/vins/featureTracker/: feature_tracker.h
vins/include/vins/gpl/: EigenUtils.h
vins/include/vins/initial/: initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
vins/include/vins/logger/: logger.h
vins/include/vins/utility/: tic_toc.h  utility.h
vins/src/camera_models/: Camera.cc  CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  PinholeFullCamera.cc  ScaramuzzaCamera.cc
vins/src/estimator/: estimator.cpp  feature_manager.cpp  parameters.cpp
vins/src/factor/: marginalization_factor.cpp  pose_local_parameterization.cpp  projectionOneFrameTwoCamFactor.cpp  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameTwoCamFactor.cpp  projection_factor.cpp
vins/src/featureTracker/: feature_tracker.cpp
vins/src/gpl/: EigenQuaternionParameterization.cc  gpl.cc
vins/src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp  solve_5pts.cpp
vins/src/logger/: logger.cpp
vins/src/utility/: utility.cpp
